--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My video</title>
 </head>
 <body>
-<h4>site with an yt video</h4>
+<h4>site with a YT video</h4>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PFJAuAWxuvI" allowfullscreen>
 </iframe>
