--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My video</title>
+<title>My backing video</title>
 </head>
 <body>
 <h4>site with a YT video</h4>
