--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h4>site with a YT video</h4>
-
+<p>Watch this video to learn baking cookies</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PFJAuAWxuvI" allowfullscreen>
 </iframe>
 
